<resources>
    <string name="app_name">Oak Color Picker</string>

    <!-- Strings related to login -->
    <string name="ok">OK</string>
    <string name="prompt_device_id">DeviceID</string>
    <string name="prompt_access_token">Access token</string>
    <string name="prompt_email">Email address</string>
    <string name="prompt_password">Password</string>
    <string name="action_connect_to_oak">Connect OAK device</string>
    <string name="action_list_oak_device">List OAK device</string>
    <string name="action_sign_in_short">Connect OAK</string>
    <string name="error_invalid_device_id">This device ID is invalid</string>
    <string name="error_invalid_email">This email is invalid</string>
    <string name="error_fetch_actual_value">Error while fetching actual set value</string>
    <string name="error_set_new_value">Error while setting new value</string>
    <string name="error_fetch_name">Error while fetching your device name</string>
    <string name="error_login_particle">Error while trying to connect to your Particle account</string>
    <string name="error_fetching_device_particle">Error while trying to get your Particle device</string>
    <string name="error_no_device_active">None of the device are connected or compatible</string>
    <string name="error_invalid_password">This access token is too short</string>
    <string name="error_incorrect_password">This access token is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main_oak">Please pick the wished value</string>
    <string name="title_device_selection">Please select the device you\'d like to use</string>
    <string name="title_oak_login">Please login to your Particle account</string>
    <string name="loading_previous_value">Retrieving previous set value</string>
    <string name="login_in_progress">Login your Particle account</string>
    <string name="boutton_on">ON</string>
    <string name="button_off">OFF</string>
    <string name="rgb_intensity">RGB Intensity</string>
    <string name="white_intensity">White Intensity</string>
    <string name="particle_account_preference_title">Particle Account</string>
    <string name="particle_account_preference_summary">Edit you Particle credential</string>
    <string name="particle_account_email_edit_summary">Edit your Particle account email address</string>
    <string name="particle_account_email_edit_title">Email address</string>
    <string name="particle_account_password_edit_summary">Edit your Particle account password</string>
    <string name="particle_account_password_edit_title">Password</string>
</resources>
