<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.riromain.oak.colorpickeroak2.MainOakActivity">

    <!--include layout="@layout/content_main_oak" /-->
    <LinearLayout
        android:id="@+id/progress_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">
        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="fill_parent"
            android:layout_height="400dp"
            android:layout_gravity="center_horizontal" />
        <TextView
            android:text="@string/loading_previous_value"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:gravity="center" />
    </LinearLayout>


    <ScrollView
        android:id="@+id/rgb_picker_container_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">
        <LinearLayout
            android:id="@+id/rgb_picker_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.larswerkman.holocolorpicker.ColorPicker
                android:id="@+id/rgbcolorpicker"
                android:layout_width="match_parent"
                android:layout_height="381dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/rgb_intensity"/>
            <com.larswerkman.holocolorpicker.OpacityBar
                android:id="@+id/rgbintensitybar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/white_intensity"/>
            <com.larswerkman.holocolorpicker.OpacityBar
                android:id="@+id/whiteintensitybar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <Button
                android:id="@+id/on_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dp"
                android:text="@string/boutton_on"/>
            <Button
                android:id="@+id/off_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_off"/>
        </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
